--- a/css/soccer_news.css
+++ b/css/soccer_news.css
@@ -1,3 +1,13 @@
+body{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 h1{
     color: green;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+#update-container{
+    margin: 30px;
 }
